# XpMono

./: .gitignore  .gitlab-ci.yml  .gitmodules  .props  Dockerfile  README.md  XpSettings.DotSettings  remove_setting.py  start_backend.bat  start_backend.sh  supervisord.conf  test.py  vcpkg.json
.gitlab-ci/: full_build.yml
Apricot/: Apricot.sln
Cherry/: __main__.py  analyzer.py  commands.py  database.py  main.py  models.py  products.py  protocol.py  requirements.txt
ClipboardInformationFig/: ClipboardInformationFig.sln
CornCake/: __main__.py  logger.py  protocol.py  server.py  structs.py
CubeClimberFig/: CubeClimberFig.sln  CubeClimberFig.vcxproj  Main.cpp
Fig/: Fig.sln  Fig.vcxproj  Fig.vcxproj.filters  FigModule.cpp  FigOperation.cpp  FigsContainer.cpp  (+1 more)
Liver/: Liver.sln  (+9 more)
PitangaPower/: .gitignore  CMakeLists.txt  CMakePresets.json  main.c  payload.json
PitangaPower/src/: BlockDevice.cpp  BlockDevice.hpp  BlockFilesystem.hpp  Board.cpp  Board.hpp  BoardFilesystem.cpp  BoardFilesystem.hpp  BoardRuntime.cpp  BoardRuntime.hpp  Config.hpp  Debug.hpp  FatFilesystem.cpp  FatFilesystem.hpp  File.cpp  File.hpp  Json.hpp  KeyStroke.cpp  KeyStroke.hpp  LittlefsFilesystem.cpp  LittlefsFilesystem.hpp  Main.cpp  MountedBlockFilesystem.cpp  MountedBlockFilesystem.hpp  SendKeystrokesAction.cpp  Strings.cpp  Strings.hpp  Utils.hpp  main.cpp  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h
PitangaPower/src/Actions/: DelayAction.cpp  DelayAction.hpp  IPayloadAction.hpp  PayloadActionFactory.cpp  PayloadActionFactory.hpp  SendKeystrokesAction.hpp
PitangaPower/src/Config/: usb_descriptors.c
(+668 files in other folders)
